namespaces/live.cloud-platform.service.justice.gov.uk/laa-civil-case-api-staging/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-civil-case-api-staging"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "staging"
    cloud-platform.justice.gov.uk/namespace: "laa-cla-backend-staging"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-cla-dev"
    cloud-platform.justice.gov.uk/application: "LAA-Civil-Case-API"
    cloud-platform.justice.gov.uk/owner: "CLA: civil-legal-advice@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-civil-case-api"
    cloud-platform.justice.gov.uk/team-name: "laa-get-access"
    cloud-platform.justice.gov.uk/review-after: ""
